--- a/scripts/components/road3/tpls/attr_branch_Tpl/realImageOfBranch.html
+++ b/scripts/components/road3/tpls/attr_branch_Tpl/realImageOfBranch.html
@@ -43,9 +43,9 @@
                 </div> 
             </div>
             <div class="d-group">
-                <div class="d-name">实景图号：</div>
+                <div class="d-name">箭头图号：</div>
                 <div class="d-value">
-                    <input type="text" class="rounded d-input form-pic-input" placeholder="实景图号" ng-model="diverObj.realimages[0].arrowCode" ng-keydown="showPicSelect()">
+                    <input type="text" class="rounded d-input form-pic-input" placeholder="箭头图号" ng-model="diverObj.realimages[0].arrowCode" ng-keydown="showPicSelect()">
                     <div class="pic-show" ng-show="showImgData">
                         <div class="option-hide">
                             <button type="button" class="close" aria-label="Close" ng-click="hidePicSelect($event)">
@@ -74,7 +74,7 @@
                 </div>
             </div>
             <div class="d-group">
-                <div class="d-name">箭头图号：</div>
+                <div class="d-name">实景图号：</div>
                 <div class="d-value">
                     <div ng-bind="diverObj.realimages[0].realCode" class="show-val"></div>
                 </div>
