--- a/scripts/components/road3/tpls/attr_node_tpl/rwNodeTpl.html
+++ b/scripts/components/road3/tpls/attr_node_tpl/rwNodeTpl.html
@@ -1,41 +1,32 @@
 
 <div id="rdNodediv"  ng-controller="rwNodeController" >
-    <div style="height:50px">
-        <form class="form-horizontal" method="get">
-            <div class="panel panel-default " style="background-color: transparent;border:0;">
-                <div class="panel-heading font-bold" style=" border:0;height: 100%; background-color: transparent;color:#FFF;padding: 10px 15px;">
-                    铁路点
-                    <span ng-if="brigeLinkArrays==null" class="label label-info" >{{rwNodeData.pid}}</span>
-                </div>
-            </div>
-        </form>
+    <div class="fm-panel" >
+        <div class="title">
+            铁路点 <span ng-if="brigeLinkArrays==null" class="label label-info" >{{rwNodeData.pid}}</span>
+        </div>
+        <div class="content" style="padding-bottom: 18px;">
+            <ul class="fm-ul fm-ul-form">
+                <li>
+                    <label>种 别</label>
+                    <div ng-repeat="item in kind | filter:{id:rwNodeData.kind}">
+                        <input type="text" ng-model="item.label" disabled="disabled">
+                    </div>
+                </li>
+                <li>
+                    <label>形 态</label>
+                    <div>
+                        <select  ng-model="rwNodeData.form"
+                                 ng-options="value.id as value.label for value in form" >
+                        </select>
+                    </div>
+                </li>
+                <li>
+                    <label>图符号</label>
+                    <div>
+                        <input type="text"  ng-model="rwNodeData.meshId" disabled="disabled">
+                    </div>
+                </li>
+            </ul>
+        </div>
     </div>
-    <form name="adNodeForm">
-    <ul class="list-group list-group-lg m-b-none">
-        <li class="list-group-item">
-            <div ><label class="control-label">种别</label></div>
-            <div class="inline" style="text-align: left" ng-repeat="item in kind | filter:{id:rwNodeData.kind}">
-                <input type="text" ng-model="item.label" disabled="disabled">
-            </div>
-
-        </li>
-
-        <li class="list-group-item">
-            <div ><label class="control-label">形态</label></div>
-            <div class="inline" style="text-align: left">
-                <select  ng-model="rwNodeData.form"
-                         ng-options="value.id as value.label for value in form" >
-                </select>
-            </div>
-        </li>
-
-        <li class="list-group-item">
-            <div ><label class="control-label">图符号</label></div>
-            <div class="inline" style="text-align: left">
-                <input type="text"  ng-model="rwNodeData.meshId" disabled="disabled">
-            </div>
-
-        </li>
-    </ul>
-    </form>
 </div>
