--- a/scripts/components/road3/tpls/attr_tips_tpl/sceneAllTipsTpl.html
+++ b/scripts/components/road3/tpls/attr_tips_tpl/sceneAllTipsTpl.html
@@ -211,6 +211,47 @@
                         </div>
                     </form>
                 </div>
+                <!--begin 红绿灯-->
+                <div class="panel-body" ng-if="allTipsType==1102" style="border-radius: 4px;background-color: #555;">
+                    <form class="form-horizontal" method="get" style="padding: 0px 3px 0px 3px;">
+                        <div class="form-group" style="height: 10%;margin-bottom: 3px;margin-top:3px;color:#fff;border-radius:4px;">
+                            <label class="col-sm-5 control-label" style="padding: 4px">状&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;态:</label>
+                            <div class="col-sm-7" style="padding: 3px">
+                                <span  class="label label-info" ng-bind="showContent"></span>
+                            </div>
+                        </div>
+                        <div class="form-group" style="height: 10%;margin-bottom: 3px;margin-top:3px;color:#fff;border-radius:4px;">
+                            <label class="col-sm-5 control-label" style="padding: 4px">进&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;入:</label>
+                            <div class="col-sm-7" style="padding: 3px">
+                                <div class="col-sm-12" style="padding: 3px" ng-repeat="item in sceneExit">
+                                    <span class="label blank-text" ng-click="getFeatDataCallback(item,'RDLINK')" ng-bind="item"></span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group" style="height: 10%;margin-bottom: 3px;margin-top:3px;color:#fff;border-radius:4px;">
+                            <label class="col-sm-5 control-label" style="padding: 4px">退&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;出:</label>
+                            <div class="col-sm-7">
+                                <div class="col-sm-12" style="padding: 3px" ng-repeat="item in sceneExit">
+                                    <span class="label blank-text" ng-click="getFeatDataCallback(item,'RDLINK')" ng-bind="item"></span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group" style="height: 10%;margin-bottom: 3px;margin-top:3px;color:#fff;border-radius:4px;">
+                            <label class="col-sm-5 control-label" style="padding: 4px">是否受指控:</label>
+                            <div class="col-sm-7" style="padding: 3px">
+                                <span class="label" ng-if="inCt==0">存在不受质控Link</span>
+                                <span class="label" ng-if="inCt==1">全部受指控</span>
+                            </div>
+                        </div>
+                        <div class="form-group" style="height: 10%;margin-bottom: 3px;margin-top:3px;color:#fff;border-radius:4px;">
+                            <label class="col-sm-5 control-label" style="padding: 4px">实景图类型:</label>
+                            <div class="col-sm-7" style="padding: 3px">
+                                <span class="label" ng-bind="schemaType"></span>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <!--end 红绿灯-->
                 <div class="panel-body"  ng-if="allTipsType==1105">
                     <form class="form-horizontal" method="get" style="padding:0px 3px 0px 3px;">
                         <div class="form-group" style="height: 6%;margin-bottom: 3px;color:#fff;border-radius:4px;">
