--- a/scripts/components/road3/tpls/attr_tips_tpl/sceneAllTipsTpl.html
+++ b/scripts/components/road3/tpls/attr_tips_tpl/sceneAllTipsTpl.html
@@ -221,22 +221,6 @@
                             </div>
                         </div>
                         <div class="form-group" style="height: 10%;margin-bottom: 3px;margin-top:3px;color:#fff;border-radius:4px;">
-                            <label class="col-sm-5 control-label" style="padding: 4px">进&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;入:</label>
-                            <div class="col-sm-7" style="padding: 3px">
-                                <div class="col-sm-12" style="padding: 3px" ng-repeat="item in sceneExit">
-                                    <span class="label blank-text" ng-click="getFeatDataCallback(item,'RDLINK')" ng-bind="item"></span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="form-group" style="height: 10%;margin-bottom: 3px;margin-top:3px;color:#fff;border-radius:4px;">
-                            <label class="col-sm-5 control-label" style="padding: 4px">退&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;出:</label>
-                            <div class="col-sm-7">
-                                <div class="col-sm-12" style="padding: 3px" ng-repeat="item in sceneExit">
-                                    <span class="label blank-text" ng-click="getFeatDataCallback(item,'RDLINK')" ng-bind="item"></span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="form-group" style="height: 10%;margin-bottom: 3px;margin-top:3px;color:#fff;border-radius:4px;">
                             <label class="col-sm-5 control-label" style="padding: 4px">是否受指控:</label>
                             <div class="col-sm-7" style="padding: 3px">
                                 <span class="label" ng-if="inCt==0">存在不受质控Link</span>
@@ -244,9 +228,19 @@
                             </div>
                         </div>
                         <div class="form-group" style="height: 10%;margin-bottom: 3px;margin-top:3px;color:#fff;border-radius:4px;">
-                            <label class="col-sm-5 control-label" style="padding: 4px">实景图类型:</label>
+                            <label class="col-sm-5 control-label" style="padding: 4px">不受指控Link:</label>
                             <div class="col-sm-7" style="padding: 3px">
-                                <span class="label" ng-bind="schemaType"></span>
+                                <div class="col-sm-12" style="padding: 3px" ng-repeat="item in sceneExit">
+                                    <span class="label blank-text" ng-click="getFeatDataCallback(item,'RDLINK')" ng-bind="item"></span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group" style="height: 10%;margin-bottom: 3px;margin-top:3px;color:#fff;border-radius:4px;">
+                            <label class="col-sm-5 control-label" style="padding: 4px">受控&nbsp;&nbsp;&nbsp;Link:</label>
+                            <div class="col-sm-7">
+                                <div class="col-sm-12" style="padding: 3px" ng-repeat="item in sceneExit">
+                                    <span class="label blank-text" ng-click="getFeatDataCallback(item,'RDLINK')" ng-bind="item"></span>
+                                </div>
                             </div>
                         </div>
                     </form>
