--- a/scripts/components/road3/tpls/attr_tips_tpl/sceneAllTipsTpl.html
+++ b/scripts/components/road3/tpls/attr_tips_tpl/sceneAllTipsTpl.html
@@ -270,6 +270,54 @@
                     </form>
                 </div>
                 <!--end 红绿灯方位-->
+                <!--begin 大门-->
+                <div class="panel-body" ng-if="allTipsType==1104">
+                    <form class="form-horizontal" method="get" style="padding:0px 3px 0px 3px;">
+                        <div class="form-group" style="height: 6%;margin-bottom: 3px;color:#fff;border-radius:4px;">
+                            <label class="col-sm-5 control-label" style="padding: 4px">状&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;态:</label>
+                            <div class="col-sm-7" style="padding: 3px">
+                                <span class="label label-info" ng-bind="showContent"></span>
+                            </div>
+                        </div>
+                        <div class="form-group" style="height: 6%;margin-bottom: 3px;color:#fff;border-radius:4px;">
+                            <label class="col-sm-5 control-label" style="padding: 4px">进&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;入:</label>
+                            <div class="col-sm-7" style="padding: 4px" ng-if="dataTipsData.f.id.length > 10">
+                                <span class="label " style="cursor:pointer;" ng-click="getFeatDataCallback(inLinkPid,'RDLINK')" ng-bind="inLinkPid.substring(0,6)+'...'" title="{{inLinkPid}}"></span>
+                            </div>
+                            <div class="col-sm-7" style="padding: 4px" ng-if="inLinkPid.length <= 10">
+                                <span class="label " style="cursor:pointer;" ng-click="getFeatDataCallback(inLinkPid,'RDLINK')" ng-bind="inLinkPid" title="{{inLinkPid}}"></span>
+                            </div>
+                        </div>
+                        <div class="form-group" style="height: 6%;margin-bottom: 3px;color:#fff;border-radius:4px;">
+                            <label class="col-sm-5 control-label" style="padding: 4px">退&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;出:</label>
+                            <div class="col-sm-7" style="padding: 4px" ng-if="outLinkPid.length > 10">
+                                <span class="label " style="cursor:pointer;" ng-click="getFeatDataCallback(outLinkPid,'RDLINK')" ng-bind="outLinkPid.substring(0,6)+'...'" title="{{outLinkPid}}"></span>
+                            </div>
+                            <div class="col-sm-7" style="padding: 4px" ng-if="outLinkPid.length <= 10">
+                                <span class="label " style="cursor:pointer;" ng-click="getFeatDataCallback(outLinkPid,'RDLINK')" ng-bind="outLinkPid" title="{{outLinkPid}}"></span>
+                            </div>
+                        </div>
+                        <div class="form-group" style="height: 6%;margin-bottom: 3px;color:#fff;border-radius:4px;">
+                            <label class="col-sm-5 control-label" style="padding: 4px">大门类型:</label>
+                            <div class="col-sm-7" style="padding: 4px">
+                                <span class="label " ng-bind="gateType"></span>
+                            </div>
+                        </div>
+                        <div class="form-group" style="height: 6%;margin-bottom: 3px;color:#fff;border-radius:4px;">
+                            <label class="col-sm-5 control-label" style="padding: 4px">大门方向:</label>
+                            <div class="col-sm-7" style="padding: 4px">
+                                <span class="label" ng-bind="gateDir"></span>
+                            </div>
+                        </div>
+                        <div class="form-group" style="height: 6%;margin-bottom: 3px;color:#fff;border-radius:4px;">
+                            <label class="col-sm-5 control-label" style="padding: 4px">通行时间:</label>
+                            <div class="col-sm-7" style="padding: 4px">
+                                <span class="label" ng-bind="passTime"></span>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <!--end 大门-->
                 <div class="panel-body"  ng-if="allTipsType==1105">
                     <form class="form-horizontal" method="get" style="padding:0px 3px 0px 3px;">
                         <div class="form-group" style="height: 6%;margin-bottom: 3px;color:#fff;border-radius:4px;">
