--- a/scripts/components/road3/tpls/attr_tips_tpl/sceneAllTipsTpl.html
+++ b/scripts/components/road3/tpls/attr_tips_tpl/sceneAllTipsTpl.html
@@ -366,6 +366,36 @@
                         </div>
                     </form>
                 </div>
+                <!--begin 坡度-->
+                <div class="panel-body" ng-if="allTipsType==1106" style="border-radius: 4px;background-color: #555;">
+                    <form class="form-horizontal" method="get" style="padding: 0px 3px 0px 3px;">
+                        <div class="form-group" style="height: 10%;margin-bottom: 3px;margin-top:3px;color:#fff;border-radius:4px;">
+                            <label class="col-sm-5 control-label" style="padding: 4px">状&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;态:</label>
+                            <div class="col-sm-7" style="padding: 3px">
+                                <span  class="label label-info" ng-bind="showContent"></span>
+                            </div>
+                        </div>
+                        <div class="form-group" style="height: 10%;margin-bottom: 3px;margin-top:3px;color:#fff;border-radius:4px;">
+                            <label class="col-sm-5 control-label" style="padding: 4px">关联道路:</label>
+                            <div class="col-sm-7" style="padding: 3px">
+                                <span class="label " style="cursor:pointer;" ng-click="getFeatDataCallback(dataTipsData.out.id,'RDLINK')" ng-bind="dataTipsData.out.id" title="{{dataTipsData.out.id}}"></span>
+                            </div>
+                        </div>
+                        <div class="form-group" style="height: 10%;margin-bottom: 3px;margin-top:3px;color:#fff;border-radius:4px;">
+                            <label class="col-sm-5 control-label" style="padding: 4px">坡度类型:</label>
+                            <div class="col-sm-7" style="padding: 3px">
+                                <span class="label" ng-bind='slopeType'></span>
+                            </div>
+                        </div>
+                        <div class="form-group" style="height: 10%;margin-bottom: 3px;margin-top:3px;color:#fff;border-radius:4px;">
+                            <label class="col-sm-5 control-label" style="padding: 4px">结束点标识:</label>
+                            <div class="col-sm-7" style="padding: 3px">
+                                <span class="label" ng-bind='endSlopeFlag'></span>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <!--end 坡度-->
                 <div class="panel-body"  ng-if="allTipsType==1107">
                     <form class="form-horizontal" method="get" style="padding:0px 3px 0px 3px;">
                         <div class="form-group" style="height: 6%;margin-bottom: 3px;color:#fff;border-radius:4px;">
