--- a/scripts/components/road3/tpls/attr_tips_tpl/sceneAllTipsTpl.html
+++ b/scripts/components/road3/tpls/attr_tips_tpl/sceneAllTipsTpl.html
@@ -869,6 +869,36 @@
                     </form>
                 </div>
                 <!--end 禁止穿行-->
+                <!--begin 禁止驶入-->
+                <div class="panel-body" ng-if="allTipsType==1305" style="border-radius: 4px;background-color: #555;">
+                    <form class="form-horizontal" method="get" style="padding: 0px 3px 0px 3px;">
+                        <div class="form-group" style="height: 10%;margin-bottom: 3px;margin-top:3px;color:#fff;border-radius:4px;">
+                            <label class="col-sm-5 control-label" style="padding: 4px">状&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;态:</label>
+                            <div class="col-sm-7" style="padding: 3px">
+                                <span  class="label label-info" ng-bind="showContent"></span>
+                            </div>
+                        </div>
+                        <div class="form-group" style="height: 10%;margin-bottom: 3px;margin-top:3px;color:#fff;border-radius:4px;">
+                            <label class="col-sm-5 control-label" style="padding: 4px">关联道路:</label>
+                            <div class="col-sm-7" style="padding: 3px">
+                                <span class="label " style="cursor:pointer;" ng-click="getFeatDataCallback(dataTipsData.f.id,'RDLINK')" ng-bind="dataTipsData.f.id" title="{{dataTipsData.f.id}}"></span>
+                            </div>
+                        </div>
+                        <div class="form-group" style="height: 10%;margin-bottom: 3px;margin-top:3px;color:#fff;border-radius:4px;">
+                            <label class="col-sm-5 control-label" style="padding: 4px">道路方向:</label>
+                            <div class="col-sm-7" style="padding: 3px">
+                                <span class="label" ng-bind='rdDir'></span>
+                            </div>
+                        </div>
+                        <div class="form-group" style="height: 10%;margin-bottom: 3px;margin-top:3px;color:#fff;border-radius:4px;">
+                            <label class="col-sm-5 control-label" style="padding: 4px">例外车辆:</label>
+                            <div class="col-sm-7" style="padding: 3px">
+                                <span class="label col-sm-6" ng-repeat="item in eliminateCarObj" ng-if="item.checked" ng-bind='item.label'></span>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <!--end 禁止驶入-->
                 <!-- begin 方向看板 tips-->
                 <div  class="panel-body" ng-if="allTipsType==1401">
                     <form class="form-horizontal" method="get" style="padding: 0px 3px 0px 3px;">
