--- a/scripts/components/road3/tpls/attr_tips_tpl/sceneAllTipsTpl.html
+++ b/scripts/components/road3/tpls/attr_tips_tpl/sceneAllTipsTpl.html
@@ -923,7 +923,7 @@
                             </div>
                         </div>
                         <div class="form-group" style="height: 10%;margin-bottom: 3px;margin-top:3px;color:#fff;border-radius:4px;">
-                            <label class="col-sm-5 control-label" style="padding: 4px">模&nbsp; 式&nbsp; 图:</label>
+                            <label class="col-sm-5 control-label" style="padding: 4px">底图代码:</label>
                             <div class="col-sm-7" style="padding: 3px">
                                 <span class="label" ng-bind="schemaNo"></span>
                             </div>
@@ -992,6 +992,38 @@
                     </form>
                 </div>
                 <!-- 一般道路方面start -->
+                <!-- begin 提左提右 tips-->
+                <div  class="panel-body" ng-if="allTipsType==1404">
+                    <form class="form-horizontal" method="get" style="padding: 0px 3px 0px 3px;">
+                        <div class="form-group" style="height: 10%;margin-bottom: 3px;margin-top:3px;color:#fff;border-radius:4px;">
+                            <label class="col-sm-5 control-label" style="padding: 4px">状&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;态:</label>
+                            <div class="col-sm-7" style="padding: 3px">
+                                <span  class="label label-info" ng-bind="showContent"></span>
+                            </div>
+                        </div>
+                        <div class="form-group" style="height: 10%;margin-bottom: 3px;margin-top:3px;color:#fff;border-radius:4px;">
+                            <label class="col-sm-5 control-label" style="padding: 4px">进&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;入:</label>
+                            <div class="col-sm-7" style="padding: 3px">
+                                <span class="label" ng-bind="sceneEnty.id" style="cursor:pointer;" ng-click="getFeatDataCallback(sceneEnty.id,'RDLINK')"></span>
+                            </div>
+                        </div>
+                        <div class="form-group" style="height: 10%;margin-bottom: 3px;margin-top:3px;color:#fff;border-radius:4px;">
+                            <label class="col-sm-5 control-label" style="padding: 4px">退&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;出:</label>
+                            <div class="col-sm-7">
+                                <div class="col-sm-12" style="padding: 3px" ng-repeat="item in sceneOut">
+                                    <span class="label" ng-bind="item.out.id" style="cursor:pointer;" ng-click="getFeatDataCallback(item.out.id,'RDLINK')"></span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group" style="height: 10%;margin-bottom: 3px;margin-top:3px;color:#fff;border-radius:4px;">
+                            <label class="col-sm-5 control-label" style="padding: 4px">模&nbsp; 式&nbsp; 图:</label>
+                            <div class="col-sm-7" style="padding: 3px">
+                                <span class="label" ng-bind="schemaNo"></span>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <!-- end 提左提右 tips-->
                 <div class="panel-body" ng-if="allTipsType==1405">
                     <form class="form-horizontal" method="get">
                         <div class="form-group" style="height: 10%;color:#fff;border-radius:4px;">
@@ -1150,6 +1182,26 @@
                         </div>
                     </form>
                 </div>
+                <!--begin 路面覆盖-->
+                <div class="panel-body" ng-if="allTipsType==1502">
+                    <form class="form-horizontal" method="get" style="padding: 0px 3px 0px 3px;">
+                        <div class="form-group" style="height: 10%;margin-bottom: 3px;margin-top:3px;color:#fff;border-radius:4px;">
+                            <label class="col-sm-5 control-label" style="padding: 4px">状&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;态:</label>
+                            <div class="col-sm-7" style="padding: 3px">
+                                <span class="label label-info" ng-bind="showContent"></span>
+                            </div>
+                        </div>
+                        <div class="form-group" style="height: 10%;margin-bottom: 3px;color:#fff;border-radius:4px;">
+                            <label class="col-sm-5 control-label" style="padding: 4px">组成Link:</label>
+                            <div class="col-sm-7" style="padding: 4px">
+                                <div ng-repeat="item in roadArrayLink">
+                                    <span class="label " style="cursor:pointer;" ng-click="getFeatDataCallback(item.id,'RDLINK')">{{item.id}}</span>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <!--end 路面覆盖-->
                 <div class="panel-body" ng-if="allTipsType==1510">
                     <form class="form-horizontal" method="get" style="padding: 0px 3px 0px 3px;">
                         <div class="form-group" style="height: 10%;margin-bottom: 3px;margin-top:3px;color:#fff;border-radius:4px;">
