--- a/scripts/components/poi3/tpls/edit-tools/errorCheckTpl.html
+++ b/scripts/components/poi3/tpls/edit-tools/errorCheckTpl.html
@@ -21,12 +21,11 @@
                     <span ng-if="row.rank==4" >warning</span>
                 </td>
                 <td width="5%">
-                    <a href="#" ng-if="!row.poiCheck" class="fm-target" ng-click="showOnMap(row.targets,row.geometry)">{{row.targets }}</a>
-                    <div ng-if="row.poiCheck">
-                        [IX_POI,
-                        <span ng-repeat="item in row.poiListCheck">
-                            <a href="#" ng-if="$index < row.poiListCheck.length-1" class="fm-target" ng-click="showPoiOnMap(item)">{{item }},</a>
-                            <a href="#" ng-if="$index == row.poiListCheck.length-1" class="fm-target" ng-click="showPoiOnMap(item)">{{item }}</a>
+                    <div ng-if="row.mutiCheck">
+                        [{{row.featureType}},
+                        <span ng-repeat="item in row.mutiListCheck">
+                            <a href="#" ng-if="$index < row.mutiListCheck.length-1" class="fm-target" ng-click="showPoiOnMap(item)">{{item }},</a>
+                            <a href="#" ng-if="$index == row.mutiListCheck.length-1" class="fm-target" ng-click="showPoiOnMap(item)">{{item }}</a>
                         </span>
                         ]
                     </div>
