--- a/scripts/components/tools/tpls/toolbar-map/addShapeTpl.htm
+++ b/scripts/components/tools/tpls/toolbar-map/addShapeTpl.htm
@@ -3,10 +3,10 @@
         <button type="button" class="btn btn-xs btn-shape dropdown-toggle" ng-class="{'addNode':'active'}[shapeOperator]" data-toggle="dropdown">点 <span class="caret"></span></button>
         <ul class="dropdown-menu shape-well" role="menu">
             <div class="btn-group btn-group-xs">
-                <button type="button" class="btn btn-xs btn-feat" ng-class="{'RDNODE':'active'}[featureOperator]" ng-controller="addShapeCtrl" ng-click="addShape('RDNODE')">RDNODE</button>
-                <button type="button" class="btn btn-xs btn-feat" ng-class="{'RWNODE':'active'}[featureOperator]" ng-controller="addRwShapeCtrl" ng-click="addShape('RWNODE')">RWNODE</button>
-                <button type="button" class="btn btn-xs btn-feat" ng-class="{'ADNODE':'active'}[featureOperator]" ng-controller="addAdShapeCtrl" ng-click="addShape('ADNODE')">ADNODE</button>
-                <button type="button" class="btn btn-xs btn-feat" ng-class="{'ZONENODE':'active'}[featureOperator]" ng-controller="addZoneShapeCtrl" ng-click="addShape('ZONENODE')">ZONENODE</button>
+                <button type="button" class="btn btn-xs btn-feat" ng-class="{'RDNODE':'active'}[featureOperator]" ng-controller="addShapeCtrl" ng-click="addShape('RDNODE')">道路Node</button>
+                <button type="button" class="btn btn-xs btn-feat" ng-class="{'RWNODE':'active'}[featureOperator]" ng-controller="addRwShapeCtrl" ng-click="addShape('RWNODE')">铁路Node</button>
+                <button type="button" class="btn btn-xs btn-feat" ng-class="{'ADNODE':'active'}[featureOperator]" ng-controller="addAdShapeCtrl" ng-click="addShape('ADNODE')">行政区划Node</button>
+                <button type="button" class="btn btn-xs btn-feat" ng-class="{'ZONENODE':'active'}[featureOperator]" ng-controller="addZoneShapeCtrl" ng-click="addShape('ZONENODE')">ZoneNode</button>
             </div>
         </ul>
     </div>
@@ -14,10 +14,10 @@
         <button type="button" class="btn btn-xs btn-shape dropdown-toggle" ng-class="{'addLink':'active'}[shapeOperator]" data-toggle="dropdown">线 <span class="caret"></span></button>
         <ul class="dropdown-menu shape-well" role="menu">
             <div class="btn-group btn-group-xs">
-                <button type="button" class="btn btn-xs btn-feat" ng-class="{'RDLINK':'active'}[featureOperator]" ng-controller="addShapeCtrl" ng-click="addShape('RDLINK')">RDLINK</button>
-                <button type="button" class="btn btn-xs btn-feat" ng-class="{'RWLINK':'active'}[featureOperator]" ng-controller="addRwShapeCtrl" ng-click="addShape('RWLINK')">RWLINK</button>
-                <button type="button" class="btn btn-xs btn-feat" ng-class="{'ADLINK':'active'}[featureOperator]" ng-controller="addAdShapeCtrl" ng-click="addShape('ADLINK')">ADLINK</button>
-                <button type="button" class="btn btn-xs btn-feat" ng-class="{'ZONELINK':'active'}[featureOperator]" ng-controller="addZoneShapeCtrl" ng-click="addShape('ZONELINK')">ZONELINK</button>
+                <button type="button" class="btn btn-xs btn-feat" ng-class="{'RDLINK':'active'}[featureOperator]" ng-controller="addShapeCtrl" ng-click="addShape('RDLINK')">道路Link</button>
+                <button type="button" class="btn btn-xs btn-feat" ng-class="{'RWLINK':'active'}[featureOperator]" ng-controller="addRwShapeCtrl" ng-click="addShape('RWLINK')">铁路Link</button>
+                <button type="button" class="btn btn-xs btn-feat" ng-class="{'ADLINK':'active'}[featureOperator]" ng-controller="addAdShapeCtrl" ng-click="addShape('ADLINK')">行政区划Link</button>
+                <button type="button" class="btn btn-xs btn-feat" ng-class="{'ZONELINK':'active'}[featureOperator]" ng-controller="addZoneShapeCtrl" ng-click="addShape('ZONELINK')">ZoneLink</button>
             </div>
         </ul>
     </div>
@@ -25,10 +25,10 @@
         <button type="button" class="btn btn-xs btn-shape dropdown-toggle" ng-class="{'addFace':'active'}[shapeOperator]" data-toggle="dropdown">面 <span class="caret"></span></button>
         <ul class="dropdown-menu shape-well" role="menu">
             <div class="btn-group btn-group-xs">
-                <button type="button" class="btn btn-xs btn-feat" ng-class="{'ADFACE':'active'}[featureOperator]" ng-controller="addAdShapeCtrl" ng-click="addShape('ADFACE')">AD面</button>
-                <button type="button" class="btn btn-xs btn-feat" ng-class="{'ADLINKFACE':'active'}[featureOperator]" ng-controller="addAdShapeCtrl" ng-click="addShape('ADLINKFACE')">AD线构面</button>
-                <button type="button" class="btn btn-xs btn-feat" ng-class="{'ZONEFACE':'active'}[featureOperator]" ng-controller="addZoneShapeCtrl" ng-click="addShape('ZONEFACE')">ZONE面</button>
-                <button type="button" class="btn btn-xs btn-feat" ng-class="{'ZONELINKFACE':'active'}[featureOperator]" ng-controller="addZoneShapeCtrl" ng-click="addShape('ZONELINKFACE')">ZONE线构面</button>
+                <button type="button" class="btn btn-xs btn-feat" ng-class="{'ADFACE':'active'}[featureOperator]" ng-controller="addAdShapeCtrl" ng-click="addShape('ADFACE')">行政区划Face</button>
+                <button type="button" class="btn btn-xs btn-feat" ng-class="{'ADLINKFACE':'active'}[featureOperator]" ng-controller="addAdShapeCtrl" ng-click="addShape('ADLINKFACE')">Ad线构面</button>
+                <button type="button" class="btn btn-xs btn-feat" ng-class="{'ZONEFACE':'active'}[featureOperator]" ng-controller="addZoneShapeCtrl" ng-click="addShape('ZONEFACE')">ZoneFace</button>
+                <button type="button" class="btn btn-xs btn-feat" ng-class="{'ZONELINKFACE':'active'}[featureOperator]" ng-controller="addZoneShapeCtrl" ng-click="addShape('ZONELINKFACE')">Zone线构面</button>
             </div>
         </ul>
     </div>
@@ -56,8 +56,8 @@
         <button type="button" class="btn btn-xs btn-shape dropdown-toggle" ng-class="{'addPointFeature':'active'}[shapeOperator]" data-toggle="dropdown">点要素 <span class="caret"></span></button>
         <ul class="dropdown-menu shape-well" role="menu">
             <div class="btn-group btn-group-sm" style="margin: 0px 2px;">
-                <button type="button" class="btn btx-xs btn-feat" ng-class="{'IXPOI':'active'}[featureOperator]" ng-controller="addPoiCtrl" ng-click="addPoi('IXPOI')">IXPOI</button>
-                <button type="button" class="btn btx-xs btn-feat" ng-class="{'ADADMIN':'active'}[featureOperator]" ng-controller="addAdShapeCtrl" ng-click="addShape('ADADMIN')">ADADMIN</button>
+                <button type="button" class="btn btx-xs btn-feat" ng-class="{'IXPOI':'active'}[featureOperator]" ng-controller="addPoiCtrl" ng-click="addPoi('IXPOI')">兴趣点</button>
+                <button type="button" class="btn btx-xs btn-feat" ng-class="{'ADADMIN':'active'}[featureOperator]" ng-controller="addAdShapeCtrl" ng-click="addShape('ADADMIN')">行政区划代表点</button>
             </div>
         </ul>
     </div>
